pushing to make new branch and rebuild tree

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,7 +10,8 @@
   "permissions": [
     "tabs", 
     "activeTab",
-    "scripting"
+    "scripting",
+    "nativeMessaging"
   ],
   "devtools_page": "DevtoolsPanel/devtools.html",
   "background": {
